assinatura por coordenador

--- a/documentos/templates/documentos/selecao_geracao_certificados.html
+++ b/documentos/templates/documentos/selecao_geracao_certificados.html
@@ -29,7 +29,7 @@
     <label><input id="mentoria_profissional" name="mentoria_profissional" type="checkbox" checked /> Mentorias Profissionais (antiga Mentoria Falconi)</label>&nbsp;&nbsp;&nbsp;
     <br><br>
 
-    <input type="submit" value="Gerar">
+    <input class="btn btn-primary" type="submit" value="Gerar">
 
   </form>
 
