--- a/documentos/templates/documentos/certificado_banca_intermediaria.html
+++ b/documentos/templates/documentos/certificado_banca_intermediaria.html
@@ -124,9 +124,9 @@
 
   <span class="corpo_certificado">
     Atenciosamente,<br>
-    <img class="signature" src="{{configuracao.assinatura.url|slice:"1:"}}">
+    <img class="signature" src="{{configuracao.coordenacao.assinatura.url|slice:"1:"}}">
     <br>
-    {{configuracao.coordenador}}<br>
+    {{configuracao.coordenacao.nome_para_certificados}}<br>
     <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
   </span>
     
