--- a/documentos/templates/documentos/certificado_coorientador.html
+++ b/documentos/templates/documentos/certificado_coorientador.html
@@ -135,9 +135,9 @@
     <br><br>
     Atenciosamente,<br><br>
   
-  <img class="signature" src="{{configuracao.assinatura.url|slice:"1:"}}">
+  <img class="signature" src="{{configuracao.coordenacao.assinatura.url|slice:'1:'}}">
   <br>
-  {{configuracao.coordenador}}<br>
+  {{configuracao.coordenacao.nome_para_certificados}}<br>
   <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
   </span>
 
