--- a/documentos/templates/documentos/certificado_mentoria.html
+++ b/documentos/templates/documentos/certificado_mentoria.html
@@ -12,7 +12,7 @@
       @page {
           size: a4 portrait; /*landscape*/
           margin: 5.0cm  1.3cm  1.3cm  1.5cm; /* top  right bottom left */
-          background-image: url('arquivos/papel_timbrado.pdf');
+          background-image: url("{{papel_timbrado}}");
       }
   </style>
 
