--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -221,10 +221,15 @@
         }
       };
       function carrega_site() {
-        var filterEdicao = localStorage.getItem("filterEdicao");
-        if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
-          $('#filterEdicao').val(filterEdicao).trigger('change');
-        }
+        {% if not selecionada %}
+          // Se veio uma verão definida, não puxar o cache
+          var filterEdicao = localStorage.getItem("filterEdicao");
+          if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
+            $('#filterEdicao').val(filterEdicao).trigger('change');
+          }
+        {% else %}
+          $("#filterEdicao").trigger("change");
+        {% endif %}
         carrega_pagina();
       };
       window.onload = carrega_site
