--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -322,10 +322,15 @@
     $(document).ready(carrega_semestre);
     function carrega_pagina() {};
     function carrega_site() {
-      var filterEdicao = localStorage.getItem("filterEdicao");
-      if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
-        $('#filterEdicao').val(filterEdicao).trigger('change');
-      }
+      {% if not selecionada %}
+        // Se veio uma verão definida, não puxar o cache
+        var filterEdicao = localStorage.getItem("filterEdicao");
+        if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
+          $('#filterEdicao').val(filterEdicao).trigger('change');
+        }
+      {% else %}
+        $("#filterEdicao").trigger("change");
+      {% endif %}
     };
     window.onload = carrega_site;
   </script>
