--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -322,15 +322,7 @@
     $(document).ready(carrega_semestre);
     function carrega_pagina() {};
     function carrega_site() {
-      {% if not selecionada %}
-        // Se veio uma verão definida, não puxar o cache
-        var filterEdicao = localStorage.getItem("filterEdicao");
-        if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
-          $('#filterEdicao').val(filterEdicao).trigger('change');
-        }
-      {% else %}
-        $("#filterEdicao").trigger("change");
-      {% endif %}
+      {% include "edicao_puxar_local_ou_versao.js" %}
     };
     window.onload = carrega_site;
   </script>
