--- a/professores/templates/professores/planos_de_orientacao.html
+++ b/professores/templates/professores/planos_de_orientacao.html
@@ -23,6 +23,11 @@
 {% block content %}
 
     <span class="titulo">Planos de Orientação</span>
+    <a target="_blank" rel="noopener noreferrer" href="{{request.scheme}}://{{request.get_host}}{{template.get_url}}">
+      <i class="far fa-file-alt"></i> {{template.tipo_documento}} (opcional)
+    </a><br>
+  
+    <br>
 
     <table class="table table-borderless table-sm arredondado">
       {% for projeto in projetos %}
