--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -49,6 +49,7 @@
   <select id="filter" class="filter" data-tableId="projetos">
     <option value="todos" {% if filtro == "todos" %}selected="selected"{% endif %}>todos</option>
     <option value="Co" {% if filtro == "Co" %}selected="selected"{% endif %}>Coordenação</option>
+    <option value="Op" {% if filtro == "Op" %}selected="selected"{% endif %}>Operacional</option>
     <option value="Cm" {% if filtro == "Cm" %}selected="selected"{% endif %}>Comitê PFE</option>
     <option value="Es" {% if filtro == "Es" %}selected="selected"{% endif %}>Estudantes</option>
     <option value="Or" {% if filtro == "Or" %}selected="selected"{% endif %}>Orientadores</option>
@@ -65,6 +66,7 @@
         <caption>
           <small>
             <b>Co</b>: Coordenação;
+            <b>Op</b>: Operacional;
             <b>Cm</b>: Comitê do PFE;
             <b>Es</b>: Estudantes;
             <b>Or</b>: Orientadores;
@@ -108,6 +110,7 @@
             "
             data-type="
               {% if a.aviso.coordenacao %}Co{% endif %}
+              {% if a.aviso.operacional %}Op{% endif %}
               {% if a.aviso.comite_pfe %}Cm{% endif %}
               {% if a.aviso.todos_alunos %}Es{% endif %}
               {% if a.aviso.todos_orientadores %}Or{% endif %}
@@ -124,13 +127,7 @@
               {% endif %}
             </th>
             
-            <td style="vertical-align: middle;" data-toggle="tooltip" data-html="true" animation="true" title="
-                {% if a.aviso.tipo_de_evento %}
-                  {{a.aviso.evento}} {%if a.aviso.delta >= 0 %}+ {{a.aviso.delta}}{%else%}- {% widthratio a.aviso.delta 1 -1 %}{%endif%}
-                {% else %}
-                  delta={{a.aviso.delta}}
-                {% endif %}
-              ">
+            <td style="vertical-align: middle;" data-toggle="tooltip" data-html="true" animation="true" title="{% if a.aviso.tipo_de_evento %}{{a.aviso.evento}} {%if a.aviso.delta >= 0 %}+ {{a.aviso.delta}}{%else%}- {% widthratio a.aviso.delta 1 -1 %}{%endif%}{% else %}delta={{a.aviso.delta}}{% endif %}">
               <label style="line-height: 0px;" for="{{forloop.counter}}">
                 {% if a.data%}
                   <span class="data_longa">{{a.data}}</span>
@@ -144,6 +141,9 @@
             <td style="vertical-align: middle;">
               {% if a.aviso.coordenacao %}
                 <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
+              {% endif %}
+              {% if a.aviso.operacional %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Equipe Operacional">Op</span>
               {% endif %}
               {% if a.aviso.comite_pfe %}
                 <span data-toggle="tooltip" data-html="true" animation="true" title="Comite do PFE">Cm</span>
