--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -12,47 +12,26 @@
   <script>{% include "tooltip.js" %}</script>
 
   <style>
-    textarea {
-      max-width:100%;
-    }
-
-    label {
-      margin: 3px;
-    }
-
-    table, td {
-        vertical-align: top;
-    }
+    textarea {max-width:100%;}
+    label {margin: 3px;}
+    table, td {vertical-align: top;}
 
     @media only screen and (max-width: 1100px) {
-      table, th, td {
-        font-size: 14px;
-      }
+      table, th, td {font-size: 14px;}
     }
 
     @media only screen and (max-width: 1000px) {
-      table, th, td {
-        font-size: 12px;
-      }
-      .nivel {
-        display:none;
-      }
+      table, th, td {font-size: 12px;}
+      .nivel {display:none;}
     } 
 
     @media only screen and (max-width: 800px) {
-      table, th, td {
-        font-size: 14px;
-      }
-
-      tbody {
-        display: flex;
-      }
-
+      table, th, td {font-size: 14px;}
+      tbody {display: flex;}
       tr {
         display: flex;
         flex-wrap: wrap;
       }
-
       th, td {        
         flex-basis: 100%;
         min-height: calc(130px - 5vw);;
@@ -61,9 +40,7 @@
     }
 
     @media only screen and (max-width: 500px) {
-      table, th, td {
-        font-size: 12px;
-      }
+      table, th, td {font-size: 12px;}
     }
 
     label.reduzido {
@@ -71,7 +48,6 @@
       line-height: 1.2;
       font-size: 14px;
     }
-
 
     datalist {
       display: flex;
@@ -105,10 +81,10 @@
     <br>
     {% for alocacao, relato in alocacoes_relatos %}
 
-      <div class="panel panel-default border border-secondary rounded" style="display: inline-block; padding: 8px 12px 8px 12px; max-width: 100%;">
+      <div id="{{alocacao.id}}" class="panel panel-default border border-secondary rounded" style="display: inline-block; padding: 8px 12px 8px 12px; max-width: 100%;">
 
         <b>Estudante: </b><a href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno}}</a><br>
-        <b>Data do relato: </b> 
+        <b>Data do relato: </b>
         {% if relato %}
           {{relato.momento|date:"DATE_FORMAT"}}
         {% else %}
