--- a/academica/templates/academica/exames_pesos.html
+++ b/academica/templates/academica/exames_pesos.html
@@ -84,7 +84,7 @@
     </div>
     <script>
       if (show) {
-        $('#ExamesPesosTable tr > *:nth-child(3)').show();
+        $("#ExamesPesosTable tr > *:nth-child(3)").show();
       }
     </script>
     <small>Terminar o semestre até junho e iniciar a partir de agosto.</small>
