--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -9,7 +9,7 @@
   
   {% load static %}
 
-  <script type="text/javascript" src="{% static 'js/pfe_pulsa_texto.js' %}"></script>
+  <script src="{% static 'js/pfe_pulsa_texto.js' %}"></script>
 
   {% comment %} Para o gráfico no final da página {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
