--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -15,12 +15,8 @@
   <script src="{% static 'bootstrap-select-1.13.14/dist/js/bootstrap-select.min.js' %}"></script>
 
   <style>
-    textarea {
-      max-width: 100%;
-    }
-    input {
-      max-width: 100%;
-    }
+    textarea {max-width: 100%;}
+    input {max-width: 100%;}
     label {
       margin-bottom: 0px;
       margin-top: 8px;
@@ -179,14 +175,14 @@
     <div id="ativo_div">
       {% if usuario %}
         <br>
-        <input type='hidden' value='0' name='ativo'>
+        <input type="hidden" value='0' name="ativo">
         <label for="ativo"><input type="checkbox" id="ativo" value='1' name="ativo" {% if usuario.is_active %}checked="checked"{% endif %}>
         Ativo (ainda está trabalhando <span id="org_text">na organização</span>)</label>
       {% endif %}
     </div>
 
     {% if usuario %}
-      <input type='hidden' value='0' name='comite'>
+      <input type="hidden" value='0' name="comite">
       <label for="comite"><input type="checkbox" id="comite" value='1' name="comite" {% if usuario.membro_comite %}checked="checked"{% endif %}>
       Membro Comitê PFE</label>
       <br>
@@ -195,78 +191,66 @@
     <br>
     <input class="btn btn-primary mb-1" type="submit" value="{% if usuario %}Atualiza{% else %}Cadastrar{% endif %} Usuário" style="margin-right: 1em;">
     <label for="envia"><input type="checkbox" id="envia" name="envia" style="margin-right: 4px;">cria nova senha e envia mensagem (e-mail) de conta</label>
-  
-    
-    {% comment %}
-        <label for="endereco">Endereço<br></label><br>
-    <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="1000">{{endereco}}</textarea>
-    <br><br>
-
-      {% if edicao %}
-        <input type="submit" value="Atualizar Dados do Usuário">
-      {% else %}
-      {% endif %}
-    {% endcomment %}
 
   </form>
 
 
-  <script type="text/javascript">
+  <script>
 
     function filtra_data() {
       var filterValue = $("input:radio[name=tipo_de_usuario]:checked").val()
-      var row = $('.row'); 
+      var row = $(".row"); 
       row.hide();
 
       row.each(function(i, el) {
-        if( filterValue == $(el).attr('data-type') ) {
+        if( filterValue == $(el).attr("data-type") ) {
             $(el).show();
         }
       });
 
       // Estudante
-      $("#curso").prop('required',false);
-      $("#ano").prop('required',false);
-      $("#semestre").prop('required',false);
+      $("#curso").prop("required",false);
+      $("#ano").prop("required",false);
+      $("#semestre").prop("required",false);
 
       // Professor
-      $("#ti").prop('required',false);
-      $("#tp").prop('required',false);
+      $("#ti").prop("required",false);
+      $("#tp").prop("required",false);
       
       // Parceiro
-      $("#organizacao").prop('required',false);
+      $("#organizacao").prop("required",false);
 
       if(filterValue=="professor") {
-        $("#ti").prop('required',true);
-        $("#tp").prop('required',true);
+        $("#ti").prop("required",true);
+        $("#tp").prop("required",true);
         $("#ativo_div").show();
         $("#org_text").html("no Insper");
       }
 
       if(filterValue=="parceiro") {
-        $("#organizacao").prop('required',true);
+        $("#organizacao").prop("required",true);
         $("#ativo_div").show();
         $("#org_text").html("na organização");
       }
 
       if(filterValue=="estudante") {
-        $("#curso").prop('required',true);
-        $("#ano").prop('required',true);
-        $("#semestre").prop('required',true);
+        $("#curso").prop("required",true);
+        $("#ano").prop("required",true);
+        $("#semestre").prop("required",true);
         $("#ativo_div").hide();
       }
 
       // Para não validar o que está escondido
-      $("div:hidden").children('input').attr("disabled", true);
-      $("div:hidden").children('select').attr("disabled", true);
+      $("div:hidden").children("input").attr("disabled", true);
+      $("div:hidden").children("select").attr("disabled", true);
 
       // Para validar o que está visível
-      $("div:visible").children('input').attr("disabled", false);
-      $("div:visible").children('select').attr("disabled", false);
+      $("div:visible").children("input").attr("disabled", false);
+      $("div:visible").children("select").attr("disabled", false);
 
       // para a busca do nome
       $("input[type=search]").attr("disabled", false);
-      $("#parceiro_div").children('select').attr("disabled", false);
+      $("#parceiro_div").children("select").attr("disabled", false);
 
     }
 
