--- a/templates/500.html
+++ b/templates/500.html
@@ -182,7 +182,7 @@
   </div>
   
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="js/main.js"></script>
 
   <script>
     $(function() {
