--- a/templates/tabelas.html
+++ b/templates/tabelas.html
@@ -4,9 +4,6 @@
     Data: 30 de Janeiro de 2021
 {% endcomment %}
 
-
-{% comment %} SEPARADO EM DOIS ARQUIVOS AGORA {% endcomment %}
-
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'DataTables/DataTables-1.10.24/css/dataTables.bootstrap4.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'DataTables/Buttons-1.7.0/css/buttons.bootstrap4.min.css' %}">
@@ -21,16 +18,16 @@
 <script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.print.min.js' %}"></script>
 <script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.colVis.min.js' %}"></script>
 
-<script type="text/javascript" class="init">
+<script class="init">
   $(document).ready(function() {
-    var table = $('#{{tabela}}').DataTable( {
+    var table = $("#{{tabela}}").DataTable( {
       lengthChange: false,
-      buttons: [ 'copy', 'csv', 'excel', 'pdf', 'colvis' ],
+      buttons: [ "copy", "csv", "excel", "pdf", "colvis" ],
       language: {
           emptyTable: "Tabela vazia",
           info: "Exibindo _START_ até _END_ de _TOTAL_ itens",
           buttons: {
-              colvis: 'Colunas'
+              colvis: "Colunas"
           },
           search: "Busca:",
           paginate: {
