--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -504,7 +504,7 @@
                             {% if aula.responsavel %}({{aula.responsavel.get_full_name}}){% endif %}
                           </span>
                           {% if aula.documento %}
-                            <a class="esconder" href="{{request.scheme}}://{{request.get_host}}{{aula.documento.get_url}}">
+                            <a class="esconder" href="{{request.scheme}}://{{request.get_host}}{{aula.documento.documento.url}}">
                               &nbsp;<i class="fa fa-file-pdf"></i>
                             </a>
                           {% endif %}
