--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -97,7 +97,7 @@
   {% endif %}
   {% if projeto.proposta.anexo %}
     <br><strong>Anexo :</strong>
-    <a class="text-success" href="http://{{request.get_host}}{{MEDIA_URL}}{{projeto.anexo}}">{{projeto.proposta.anexo}}</a>
+    <a class="text-success" href="http://{{request.get_host}}{{projeto.anexo.url}}">{{projeto.proposta.anexo}}</a>
   {% endif %}
 
   <hr>
