--- a/projetos/templates/projetos/lista_acompanhamento.html
+++ b/projetos/templates/projetos/lista_acompanhamento.html
@@ -12,6 +12,7 @@
     <script src="{% static 'js/Chart.min.js' %}"></script>
     
     <style>
+      thead {background-color: #bee5eb;}
       th, td {padding: 1px 5px 1px 5px;}
     </style>
     {% comment %} Para chamar os Tooltips {% endcomment %}
@@ -31,7 +32,7 @@
 
   <div class="table-responsive">
   <table id="AcompanhamentoTable"><thead>
-    <tr style="background: #F0F0F0;">
+    <tr>
       <th onclick="w3.sortHTML('#AcompanhamentoTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
       <th onclick="w3.sortHTML('#AcompanhamentoTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
       <th onclick="w3.sortHTML('#AcompanhamentoTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Data</th>
