--- a/users/templates/users/contas_senhas.html
+++ b/users/templates/users/contas_senhas.html
@@ -6,60 +6,40 @@
 {% endcomment %}
 
 {% block head %}
-
   {% load static %}
-
   <script src="{% static 'js/w3.js' %}"></script>
-
-  {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
-
   <style>
+    th {cursor:pointer; text-align: center;}
     td {padding: 1px 4px 1px 4px;}
     thead {background-color: #bee5eb;}
   </style>
-
 {% endblock %}
 
 {% block content %}
   
-  <span class="titulo">Enviar Contas e Senhas para Estudantes</span>
+  <span class="titulo">{{titulo}}</span>
 
-  <label for="filter">Edição:</label>
-  <select onchange="location = this.options[this.selectedIndex].value;">
-    {% for loop in edicoes %}
-      <option value="{{loop}}" {% if edicao == loop %}selected{% endif %}>{{loop}}</option>
-    {% endfor %}
-  </select>
-  <br>
+  {% include "edicoes.html" %}<br>
 
-  {% if estudantes %}
-    <form method="post" id="enviacontassenhas" enctype="multipart/form-data">
-      {% csrf_token %}
+  <div class="atualizar">
 
+    <form method="post" action="{% url 'envia_contas_senhas' %}" enctype="multipart/form-data">{% csrf_token %}
       <table id="EstudantesTable"><thead><tr>
-            <th class="text-center">&nbsp;<input type="checkbox" id="todos" checked>&nbsp;</th>
-            <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Estudante</th>
-            <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">e-mail</th>
+            <th>&nbsp;<input type="checkbox" id="todos" checked>&nbsp;</th>
+            <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(2)')">Estudante</th>
+            <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(3)')">e-mail</th>
         </tr></thead>
         <tbody>
-        {% for estudante in estudantes %} 
-        <tr class="item">
-          <td class="text-center">
-            <input type="checkbox" id="estudante" name="estudante" value="{{estudante.id}}" checked>
-          </td>
-          <td>
-            <a href="{% url 'estudante_detail' estudante.id %}">
-              {{estudante.user.get_full_name}}
-            </a>
-          </td>
-          <td>
-            <a href="mailto:{{estudante.user.email}}">
-              {{estudante.user.email}}
-            </a>
-          </td>
-        </tr>
-        {% endfor %}
+          {% for estudante in estudantes %} 
+            <tr class="item">
+              <td class="text-center"><input type="checkbox" id="estudante" name="estudante" value="{{estudante.id}}" checked></td>
+              <td><a href="{% url 'estudante_detail' estudante.id %}">{{estudante.user.get_full_name}}</a></td>
+              <td><a href="mailto:{{estudante.user.email}}">{{estudante.user.email}}</a></td>
+            </tr>
+          {% empty %}
+            <p>Não existem estudantes nessa edição.</p>
+          {% endfor %}
         </tbody>
       </table>
 
@@ -69,15 +49,23 @@
       <button class="btn btn-primary mb-1" type="submit">Enviar Contas e Senhas</button>
 
     </form>
-    
-  {% else %}
-    <p>Não existem estudantes nesse critério.</p>
-  {% endif %}
+
+  </div>
 
   <script>
+
+    // Deixa todos os checkboxes marcados se o checkbox do header estiver marcado
     $("#todos").change(function () {
-      $("input:checkbox").prop('checked', $(this).prop("checked"));
+      $("input:checkbox").prop("checked", $(this).prop("checked"));
     });
+
+    function carrega_pagina() {};
+    function carrega_site(){
+      carrega_pagina();
+    };
+    window.onload = carrega_site
   </script>
+  
+  {% include "edicoes_ajax.html" %}
 
 {% endblock %}
